[gd_scene load_steps=4 format=3 uid="uid://48n404mji4ep"]

[ext_resource type="Script" path="res://UI/achievements_menu.gd" id="1_ianec"]
[ext_resource type="PackedScene" uid="uid://63qe8ib3fixo" path="res://UI/Achievements/achievement_panel.tscn" id="2_b42gd"]
[ext_resource type="Theme" uid="uid://cbuxucan2by7n" path="res://UI/Theme/main_theme.tres" id="3_fsqa7"]

[node name="AchievementMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ianec")
achievement_panel = ExtResource("2_b42gd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_fsqa7")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.34609, 0.056572, 1)

[node name="BackButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 37.37
offset_top = 37.085
offset_right = 87.37
offset_bottom = 68.085
text = "BACK"

[node name="ResetButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1052.0
offset_top = 37.0
offset_right = 1106.0
offset_bottom = 68.0
text = "RESET
"

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="AchievementsContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
